--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "devDependencies": {
     "grunt": "~0.4.0",
     "grunt-contrib-jshint": "~0.1.1",
-    "grunt-contrib-nodeunit": "~0.1.2",
-    "grunt-contrib-uglify": "~0.1.2"
+    "grunt-contrib-uglify": "~0.1.2",
+    "grunt-contrib-stylus": "~0.4.1",
+    "nib": "~0.9.1",
+    "grunt-contrib-jade": "~0.5.0",
+    "grunt-contrib-concat": "~0.1.3",
+    "grunt-contrib-watch": "~0.3.1"
   }
 }
